<resources>
    <string name="app_name">Vidya vikas club</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="menu_events">Events</string>
    <string name="menu_documents">Documents</string>
    <string name="menu_ebooks">E-Books</string>
    <string name="menu_earticles">E-Articles</string>
    <string name="menu_eqbooks">E-Question Book</string>
    <string name="menu_about">About</string>

    <string name="write_file">This app needs access to your file storage so that it can write files.</string>
</resources>
